--- a/kustomize/install/bases/kustomization.yaml
+++ b/kustomize/install/bases/kustomization.yaml
@@ -1,4 +1,4 @@
-namespace: postgres-operator
+namespace: chat
 
 commonLabels:
   postgres-operator.crunchydata.com/control-plane: postgres-operator
