--- a/helm/install/Chart.yaml
+++ b/helm/install/Chart.yaml
@@ -1,6 +1,7 @@
-apiVersion: v3
+apiVersion: v2
 name: pgo
-description: A Helm chart for Kubernetes
+description: Installer for PGO, the open source Postgres Operator from Crunchy Data
+
 type: application
-version: 0.1.0
-appVersion: 5.0.2
+version: 0.3.0
+appVersion: 5.1.0
