--- a/kustomize/multi-backup-repo/postgres.yaml
+++ b/kustomize/multi-backup-repo/postgres.yaml
@@ -3,8 +3,8 @@ kind: PostgresCluster
 metadata:
   name: hippo-multi-repo
 spec:
-  image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres-ha:centos8-13.4-0
-  postgresVersion: 13
+  image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres:ubi8-14.2-1
+  postgresVersion: 14
   instances:
     - dataVolumeClaimSpec:
         accessModes:
@@ -14,9 +14,7 @@ spec:
             storage: 1Gi
   backups:
     pgbackrest:
-      image: registry.developers.crunchydata.com/crunchydata/crunchy-pgbackrest:centos8-2.33-2
-      repoHost:
-        dedicated: {}
+      image: registry.developers.crunchydata.com/crunchydata/crunchy-pgbackrest:ubi8-2.38-0
       configuration:
       - secret:
           name: pgo-multi-repo-creds
